change location of Main class

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <mainClass>main.java.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
@@ -33,6 +33,13 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>16.0.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.32.3.3</version>
         </dependency>
     </dependencies>
 </project>
