--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,13 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.32.3.3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jdatepicker/jdatepicker -->
+        <dependency>
+            <groupId>org.jdatepicker</groupId>
+            <artifactId>jdatepicker</artifactId>
+            <version>1.3.4</version>
+        </dependency>
+
     </dependencies>
 </project>
